// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL: Timeline timelineSearch [presets: perPage 3] by exact postcodes [::postcodes] 1`] = `
[
  {
    "avg": 229400,
    "count": 1,
    "date": "2007-08-01",
    "postcode": "E20",
  },
  {
    "avg": 100000,
    "count": 1,
    "date": "2013-10-01",
    "postcode": "E20",
  },
  {
    "avg": 127500,
    "count": 2,
    "date": "2013-12-01",
    "postcode": "E20",
  },
]
`;

exports[`GraphQL: Timeline timelineSearch [presets: perPage 3] by postcode wildcard [::pattern] 1`] = `
[
  {
    "avg": 229400,
    "count": 1,
    "date": "2007-08-01",
    "postcode": "E20",
  },
  {
    "avg": 100000,
    "count": 1,
    "date": "2013-10-01",
    "postcode": "E20",
  },
  {
    "avg": 127500,
    "count": 2,
    "date": "2013-12-01",
    "postcode": "E20",
  },
]
`;

exports[`GraphQL: Timeline timelineSearch [presets: perPage 3] in date range [::from, ::to] 1`] = `
[
  {
    "avg": 100000,
    "count": 1,
    "date": "2013-10-01",
    "postcode": "E20",
  },
  {
    "avg": 127500,
    "count": 2,
    "date": "2013-12-01",
    "postcode": "E20",
  },
  {
    "avg": 755685,
    "count": 3,
    "date": "2015-10-01",
    "postcode": "E20",
  },
]
`;

exports[`GraphQL: Timeline timelineSearch [presets: perPage 3] without criteria 1`] = `
[
  {
    "avg": 229400,
    "count": 1,
    "date": "2007-08-01",
    "postcode": "E20",
  },
  {
    "avg": 100000,
    "count": 1,
    "date": "2013-10-01",
    "postcode": "E20",
  },
  {
    "avg": 127500,
    "count": 2,
    "date": "2013-12-01",
    "postcode": "E20",
  },
]
`;

exports[`GraphQL: Timeline timelineSearch [presets: perPage 3] without criteria: 2nd page 1`] = `
[
  {
    "avg": 755685,
    "count": 3,
    "date": "2015-10-01",
    "postcode": "E20",
  },
  {
    "avg": 745000,
    "count": 1,
    "date": "2015-11-01",
    "postcode": "E20",
  },
  {
    "avg": 715000,
    "count": 2,
    "date": "2015-12-01",
    "postcode": "E20",
  },
]
`;
